--- a/app/src/main/res/layout/activity_add_word.xml
+++ b/app/src/main/res/layout/activity_add_word.xml
@@ -18,8 +18,7 @@
         <android.support.design.widget.TextInputEditText
             android:id="@+id/edit0"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Swedish" />
+            android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -36,8 +35,7 @@
         <android.support.design.widget.TextInputEditText
             android:id="@+id/edit1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="English" />
+            android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
