--- a/app/src/main/res/menu/menu_exercise.xml
+++ b/app/src/main/res/menu/menu_exercise.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
     <item
-        android:id="@+id/action_selectionmethod"
+        android:id="@+id/action_selectlang"
         android:orderInCategory="100"
+        android:title="@string/action_selectlang"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_selectionmethod"
+        android:orderInCategory="200"
         android:title="@string/action_selectionmethod"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_datasetpath"
-        android:orderInCategory="200"
+        android:orderInCategory="300"
         android:title="@string/action_datasetpath"
         app:showAsAction="never" />
 </menu>
