--- a/app/src/main/res/menu/menu_wordlist.xml
+++ b/app/src/main/res/menu/menu_wordlist.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
     <item
-        android:id="@+id/action_sort"
+        android:id="@+id/action_selectlang"
         android:orderInCategory="100"
+        android:title="@string/action_selectlang"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_sort"
+        android:orderInCategory="200"
         android:title="@string/action_sort"
         app:showAsAction="never" />
 </menu>
